--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.3"
   },
+  "homepage": "https://github.com/kencford/React-Portfolio",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
